--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img src="feedback.png">
                      <div>
                         <p>Give Feedback</p>
-                        <a href="#">Help us to improve the new design</a>
+                        <a href="https://aleksandratremba.github.io/my_page/">Help us to improve the new design</a>
                      </div>
                 </div>
                 <hr>
@@ -232,7 +232,7 @@
                 <div class="online">
                     <img src="antelope1.png">
                 </div>
-                <p>Bambie Grey</p>
+                <a href="http://aleksandratremba.github.io/other_page/">Bambie Grey</a>
             </div>
             <div class="online-list">
                 <div class="online">
