--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="loki.png">
                      <div>
                         <p>Loki Lafeyson</p>
-                        <a href="#">See your profile</a>
+                        <a href="https://aleksandratremba.github.io/my_page/">See your profile</a>
                      </div>
                 </div> 
                 <hr>
@@ -52,7 +52,7 @@
                     <img src="feedback.png">
                      <div>
                         <p>Give Feedback</p>
-                        <a href="https://aleksandratremba.github.io/my_page/">Help us to improve the new design</a>
+                        <a href="#">Help us to improve the new design</a>
                      </div>
                 </div>
                 <hr>
