--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
         <!------------ left-sidebar----------------> 
         <div class="left-sidebar">
             <div class="imp-links">
-                <a href="#"> <img src="globe.png"> Latest News</a>
-                <a href="#"> <img src="users1.png"> Friends</a>
+                <a href="#"> <img src="globe.png"> Projects</a>
+                <a href="#"> <img src="users1.png"> Study pals</a>
                 <a href="#"> <img src="users-alt.png"> Communities</a>
                 <a href="#"> <img src="bookmark.png"> Saved</a>
-                <a href="#"> See More</a>
+                <a href="#"> Study groups</a>
             </div>
             <div class="shortcut-links">
-                <p>Fields</p>
+                <p>Filters</p>
                 <a href="#"> <img src="python.png" width="40" height="40"> Python</a>
                 <a href="#"> <img src="java.png" width="40" height="40"> JavaScript</a>
                 <a href="#"> <img src="cis.png" width="40" height="40"> C++</a>
