--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <div class="imp-links">
                 <a href="#"> <img src="globe.png"> Projects</a>
                 <a href="#"> <img src="users1.png"> Study pals</a>
-                <a href="#"> <img src="users-alt.png"> Communities</a>
+                <a href="#"> <img src="users-alt.png"> Study groups</a>
                 <a href="#"> <img src="bookmark.png"> Saved</a>
-                <a href="#"> Study groups</a>
+              
             </div>
             <div class="shortcut-links">
                 <p>Filters</p>
