--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!------------ left-sidebar----------------> 
         <div class="left-sidebar">
             <div class="imp-links">
-                <a href="#"> <img src="globe.png"> Projects</a>
+                <a href="https://cailleach666.github.io/projects-web/"> <img src="globe.png"> Projects</a>
                 <a href="#"> <img src="users1.png"> Study pals</a>
                 <a href="#"> <img src="users-alt.png"> Study groups</a>
                 <a href="#"> <img src="bookmark.png"> Saved</a>
