--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="imp-links">
                 <a href="https://cailleach666.github.io/projects-web/"> <img src="globe.png"> Projects</a>
                 <a href="#"> <img src="users1.png"> Study pals</a>
-                <a href="#"> <img src="users-alt.png"> Study groups</a>
+                <a href="https://katarinazeml.github.io/groups/"> <img src="users-alt.png"> Study groups</a>
                 <a href="#"> <img src="bookmark.png"> Saved</a>
               
             </div>
