--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="setting-links">
                     <img src="logout.png" class="settings-icon">
-                    <a href="#">Logout <img src="right-arrow.png"
+                    <a href="https://katarinazeml.github.io/aid_it/">Logout <img src="right-arrow.png"
                         width="10px"></a>
                 </div>
 
